fix: patch overflow of navbar by removing border
- on desktop with low width's a scroll bar appeared.
	not anymore!!

--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -18,7 +18,6 @@ main {
 }
 
 .navbar {
-    border: 0.5px dotted var(--bg-primary-color);
     position: fixed;
 
     // mobile without using media query
